--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9821,3 +9821,12 @@ a.button {
 #map {
   width: 100%;
   height: 100%; }
+
+#pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  text-overflow: ellipsis;
+  margin-bottom: 20px;
+  width: 90%; }
