--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,6 @@
 <ion-view>
     <ion-content>
-        <div id="map" data-tap-disabled="true"></div>
+    	<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+        <div id="map" ></div>
     </ion-content>
 </ion-view>
