Reformat the search bar and menu button

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,6 @@
 <ion-view>
     <ion-content>
+    	<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     	<input id="pac-input" class="controls" type="text" placeholder="Search Box">
         <div id="map" ></div>
     </ion-content>
