--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9828,5 +9828,19 @@ a.button {
   font-size: 15px;
   font-weight: 300;
   text-overflow: ellipsis;
-  margin-bottom: 20px;
-  width: 90%; }
+  margin-top: 20px;
+  margin-left: -10px;
+  width: 80% !important;
+  height: 55px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  position: -6px;
+  padding-left: 30px; }
+
+#button {
+  background-color: #fff;
+  margin-top: 20px;
+  height: 55px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  padding-left: 20px; }
