Add popup functions to a service

--- a/www/templates/popup.html
+++ b/www/templates/popup.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div class="list" ng-controller="PopupCtrl">
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Group</span>
 		<input type="text" placeholder="Group" ng-model="data.group">
