Fix issue with scope in popup factory

--- a/www/templates/popup.html
+++ b/www/templates/popup.html
@@ -1,13 +1,13 @@
-<div class="list" ng-controller="MapCtrl">
+<div class="list">
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Group</span>
 		<input type="text" placeholder="Group" ng-model="data.group">
 	</label>
-		<ul class="list">
+		<!--<ul class="list">
 			<li class="item" ng-repeat="group in groups">
 				{{group}}
 			</li>
-		</ul>
+		</ul>-->
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Type</span>
 		<input type="text" placeholder="Type" ng-model="data.type">
