--- a/www/templates/findPlaces.html
+++ b/www/templates/findPlaces.html
@@ -8,7 +8,7 @@
       <option ng-repeat="item in group" value="{{item}}">{{item}}</option>
     </select>-->
     <select ng-model="data.selectedGroup" ng-options="item for item in group">
-      <option></option>
+      <option value="All">ALL</option>
     </select>
   </label>
 
