Change pageSetUp to use firebase and remove location from placeObject

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9866,3 +9866,6 @@ a.button {
 
 p {
   margin-bottom: 5px; }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important; }
