--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -8,12 +8,14 @@
 <ion-content class="has-header">
 	<ion-list>
 		<div ng-repeat="thing in list">
-			<ion-item class="item-stable" ng-click="toggleGroup(thing)" ng-class="{active: isGroupShown(thing)}">
-				<i class="icon" ng-class="isGroupShown(thing) ? 'ion-minus' : 'ion-plus'"></i>
+			<ion-item class="item-stable" ng-click="toggleGroup(thing)" ng-class="{active: isGroupShown(thing)}" can-swipe="listCanSwipe">
+				<i class="icon" ng-class="isGroupShown(thing) ? 'ion-minus' : 'ion-plus'" can-swipe="listCanSwipe"></i>
 				{{thing.name}}
 			</ion-item>
-			<ion-item class="item-accordion" ng-repeat="item in thing.items" ng-show="isGroupShown(thing)">
+			<ion-item class="item-accordion" ng-repeat="item in thing.items" ng-show="isGroupShown(thing)" can-swipe="listCanSwipe">
 				{{item.name}}
+				<ion-option-button class="button-positive" ng-click="edit(item)">Edit</ion-option-button>
+				<ion-option-button class="button-assertive" ng-click="delete(item)">Delete</ion-option-button>
 			</ion-item>
 		</div>
 	</ion-list>
