--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,21 +1,22 @@
 <ion-view view-title="Home">
     <ion-content class="padding">
 
-        <div>
-            <button class="button button-block button-positive" ng-click="loginGoogle()" ng-if="!user.data">
+        <div ng-show="appState.ready">
+            <button class="button button-block button-positive" ng-click="loginGoogle()" ng-show="!user.data">
                 Login with Google
             </button>
 
-            <button class="button button-block button-positive" ng-click="loginFacebook()" ng-if="!user.data">
+            <button class="button button-block button-positive" ng-click="loginFacebook()" ng-show="!user.data">
                 Login with Facebook
             </button>
 
-            <button class="button button-block button-positive" ng-click="openMap()" ng-if="user.data">
+            <button class="button button-block button-positive" ng-click="openMap()" ng-show="user.data">
                 Open Map
             </button>
 
-            <button class="button button-block button-assertive" ng-click="logout()" ng-if="user.data">
+            <button class="button button-block button-assertive" ng-click="logout()" ng-show="user.data">
                 Logout as {{user.data.displayName}}
             </button>
+        </div>
     </ion-content>
 </ion-view>
