--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,7 @@
-<ion-view>
+<ion-view ng-show="map">
     <ion-content>
+        <div id="map"></div>
     	<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     	<input id="pac-input" class="controls" type="text" placeholder="Search Box">
-        <div id="map"></div>
     </ion-content>
 </ion-view>
