Add ability to create account with email and password

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,45 +1,31 @@
 <ion-view view-title="Home">
-    <ion-content class="padding">
+  <ion-content class="padding">
 
-        <div id="appDescription">
-            <h1>Map Notes</h1>
-            <h4>Save all your must see locations in one place, in catagories that make sense to you</h4>
-        </div>
+    <div id="appDescription">
+      <h1>Map Notes</h1>
+      <h4>Save all your must see locations in one place, in catagories that make sense to you</h4>
+    </div>
 
-        <div id="loginButtons" ng-show="appState.ready">
-            <button id="googleButton" class="button button-block" ng-click="loginGoogle()" ng-show="!user.data">
-                Login with Google
-            </button>
+    <div id="loginButtons" ng-show="appState.ready">
+      <button id="googleButton" class="button button-block" ng-click="loginGoogle()" ng-show="!user.data">Login with Google</button>
 
-            <div class="button-bar">
-                <button id="facebook" class="button button-positive" ng-click="loginFacebook()" ng-show="!user.data">
-                Facebook
-                </button>
+      <div class="button-bar">
+        <button id="facebook" class="button button-positive" ng-click="loginFacebook()" ng-show="!user.data">Facebook</button>
 
-                <button id="twitter" class="button button-calm" ng-click="loginFacebook()" ng-show="!user.data">
-                Twitter
-                </button>
-            </div>
+        <button id="twitter" class="button button-calm" ng-click="loginTwitter()" ng-show="!user.data">Twitter</button>
+      </div>
 
-            <div class="button-bar" id="emailAccounts">
-                <button class="button button-clear button-stable" ng-show="!user.data">
-                  Sign in with email
-                </button>
+      <div class="button-bar" id="emailAccounts">
+        <button class="button button-clear button-stable" ng-click="loginEmail()" ng-show="!user.data">Sign in with email</button>
 
-                <button class="button button-clear button-stable" ng-show="!user.data">
-                  Create Account
-                </button>
-            </div>
+        <button class="button button-clear button-stable" ng-click="createAccount()" ng-show="!user.data">Create Account</button>
+      </div>
 
-            <div id="logoutButtons">
-                <button id="logout" class="button button-block" ng-click="logout()" ng-show="user.data">
-                    Logout as {{user.data.displayName}}
-                </button>
+      <div id="logoutButtons">
+        <button id="logout" class="button button-block" ng-click="logout()" ng-show="user.data">Logout as {{user.data.displayName}}</button>
 
-                <button class="button button-block button-positive" ng-click="openMap()" ng-show="user.data">
-                    Back to Map
-                </button>
-            </div>
-        </div>
-    </ion-content>
+        <button class="button button-block button-positive" ng-click="openMap()" ng-show="user.data">Back to Map</button>
+      </div>
+    </div>
+  </ion-content>
 </ion-view>
