Add ability to sign in with email

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -22,7 +22,7 @@
       </div>
 
       <div id="logoutButtons">
-        <button id="logout" class="button button-block" ng-click="logout()" ng-show="user.data">Logout as {{user.data.displayName}}</button>
+        <button id="logout" class="button button-block" ng-click="logout()" ng-show="user.data">Logout as {{user.displayName}}</button>
 
         <button class="button button-block button-positive" ng-click="openMap()" ng-show="user.data">Back to Map</button>
       </div>
