--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,32 @@
 <ion-view ng-show="map">
-    <ion-content>
-        <div id="map"></div>
-    	<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-    	<input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    </ion-content>
+  <ion-side-menus>
+    <!--Center content-->
+    <ion-side-menu-content>
+
+      <div id="map"></div>
+      <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+      <ion-nav-view></ion-nav-view>
+     
+
+    </ion-side-menu-content>
+
+
+    <!-- Left Menu -->
+    <!--<div ng-controller="MenuCtrl">-->
+      <ion-side-menu side="left">
+        <ion-header-bar class="bar-stable">
+          <h1 class="title ng-cloak">Map Notes</h1>
+        </ion-header-bar>
+        <ion-content>
+          <ion-list class="ng-cloak">
+            <!--<ion-item ng-repeat="task in tasks" ng-click="this[task.func]()">-->
+            <ion-item ng-repeat="task in tasks" ng-click="getFunctions({{task}})">
+            {{task.title}}
+            </ion-item>
+          </ion-list>
+        </ion-content>
+      </ion-side-menu>
+    <!--</div>-->
+  </ion-side-menus>
 </ion-view>
