--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -13,7 +13,10 @@
 				{{thing.name}}
 			</ion-item>
 			<ion-item class="item-accordion" ng-repeat="item in thing.items" ng-show="isGroupShown(thing)" can-swipe="listCanSwipe">
+				<div>
 				{{item.name}}
+				<i id="slideIcon" class="icon-right ion-chevron-left"></i>
+				 </div>
 				<ion-option-button class="button-positive" ng-click="edit(item)">Edit</ion-option-button>
 				<ion-option-button class="button-assertive" ng-click="delete(item)">Delete</ion-option-button>
 			</ion-item>
