--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9828,12 +9828,12 @@ a.button {
   font-weight: 300;
   text-overflow: ellipsis;
   margin-top: 20px;
-  margin-left: 27px;
-  width: 75%;
+  margin-left: 0px;
+  width: 65%;
   height: 65px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  position: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  position: -6px;
   padding-left: 10px; }
 
 #button {
@@ -9843,7 +9843,19 @@ a.button {
   width: 75px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  padding-left: 20px; }
+  padding-left: 5px; }
+
+#closeButton {
+  background-color: #fff;
+  margin-top: 20px;
+  margin-left: -1px;
+  height: 65px;
+  width: 75px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding-right: 5px; }
 
 .infowindow .iw-title {
   color: #000;
