--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -4,8 +4,11 @@
     <ion-side-menu-content>
 
       <div id="map"></div>
-      <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+      <div>
+        <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+        <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+        <button id="closeButton" class="button icon ion-close-round" ng-click="emptySearch()"></button>
+      </div>
       <ion-nav-view></ion-nav-view>
      
 
