--- a/www/templates/offline.html
+++ b/www/templates/offline.html
@@ -1,5 +1,5 @@
 <ion-header-bar align-title="center" class="bar-positive">
-  <div class="buttons" ng-hide="appState.offline">
+  <div class="buttons">
     <button class="button icon-left ion-chevron-left button-clear button-white" ng-click="returnToMap()"></button>
   </div>
   <h1 class="title">All Places</h1>
