When searching by group and type, only show types that relate to the group

--- a/www/templates/findPlaces.html
+++ b/www/templates/findPlaces.html
@@ -7,7 +7,7 @@
     <!--<select name="selected" ng-model="data.selected">
       <option ng-repeat="item in group" value="{{item}}">{{item}}</option>
     </select>-->
-    <select ng-init="data.selectedGroup = 'All'" ng-model="data.selectedGroup" ng-options="item for item in group">
+    <select ng-init="data.selectedGroup = 'All'" ng-model="data.selectedGroup" ng-options="item for item in group" ng-change="getTypesForGroup(data.selectedGroup)">
       <option></option>
     </select>
   </label>
