Ensure list scrolls on device, amend keyboard functionality and screen changes at login

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,7 +6,8 @@
       <h4>Save all your must see locations in one place, in catagories that make sense to you</h4>
     </div>
 
-    <div id="loginButtons" ng-show="appState.ready">
+    <!--<div id="loginButtons" ng-show="appState.ready">-->
+    <div id="loginButtons">
       <button id="googleButton" class="button button-block" ng-click="loginGoogle()" ng-hide="activeUser">Login with Google</button>
 
       <button id="facebook" class="button button-positive button-block" ng-click="loginFacebook()" ng-hide="activeUser">Login with Facebook</button>
