--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,8 +2,8 @@
   <ion-content class="padding">
 
     <div id="appDescription">
-      <h1>Map Notes</h1>
-      <h4>Save all your must see locations in one place, in catagories that make sense to you</h4>
+      <h1>Tripamendation</h1>
+      <h4>Save all your trip recommendations in one place, in catagories that make sense to you</h4>
     </div>
 
     <!--<div id="loginButtons" ng-show="appState.ready">-->
