--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -19,7 +19,7 @@
     <!--<div ng-controller="MenuCtrl">-->
       <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
-          <h1 class="title ng-cloak">Map Notes</h1>
+          <h1 class="title ng-cloak">Tripamendation</h1>
         </ion-header-bar>
         <ion-content>
           <ion-list class="ng-cloak">
