--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9826,6 +9826,7 @@ a.button {
   font-family: Roboto;
   font-size: 17px;
   font-weight: 300;
+  text-align: center;
   text-overflow: ellipsis;
   margin-top: 20px;
   margin-left: -1px;
@@ -9833,7 +9834,7 @@ a.button {
   height: 60px;
   border-radius: 0;
   position: -6px;
-  padding-left: 10px; }
+  padding-left: 0px; }
 
 #button {
   background-color: #fff;
@@ -9843,7 +9844,7 @@ a.button {
   width: 20%;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  padding-left: 5px; }
+  padding-left: 20px; }
 
 #closeButton {
   background-color: #fff;
@@ -9856,7 +9857,7 @@ a.button {
   border-bottom-right-radius: 5px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  padding-right: 5px; }
+  padding-right: 20px; }
 
 .infowindow .iw-title {
   color: #000;
