--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -5,9 +5,9 @@
 
       <div id="map"></div>
       <div>
-        <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-        <button id="closeButton" class="button icon ion-close-round" ng-click="emptySearch()"></button>
+        <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>
+        <input id="pac-input" class="controls" type="text" placeholder="Search map to add place">
+        <button id="closeButton" class="button icon ion-close-round icon-right" ng-click="emptySearch()"></button>
       </div>
       <ion-nav-view></ion-nav-view>
      
