--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,7 +2,7 @@
   <ion-content class="padding">
 
     <div id="appDescription">
-      <h1>Tripamendation</h1>
+      <h1>Tripommendation</h1>
       <h4>Save all your trip recommendations in one place, in catagories that make sense to you</h4>
     </div>
 
