--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -4,7 +4,7 @@
     <ion-side-menu-content>
 
       <div id="map"></div>
-      <div>
+      <div id="search-bar">
         <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>
         <input id="pac-input" class="controls" type="text" placeholder="Search map to add place">
         <button id="closeButton" class="button icon ion-close-round icon-right" ng-click="emptySearch()"></button>
@@ -19,7 +19,7 @@
     <!--<div ng-controller="MenuCtrl">-->
       <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
-          <h1 class="title ng-cloak">Tripamendation</h1>
+          <h1 class="title ng-cloak">Tripommendation</h1>
         </ion-header-bar>
         <ion-content>
           <ion-list class="ng-cloak">
