Make menu scrollable

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -21,7 +21,7 @@
         <ion-header-bar class="bar-stable">
           <h1 class="title ng-cloak">Tripommendation</h1>
         </ion-header-bar>
-        <ion-content>
+        <ion-content overflow-scroll="true">
           <ion-list class="ng-cloak">
             <!--<ion-item ng-repeat="task in tasks" ng-click="this[task.func]()">-->
             <ion-item ng-repeat="task in tasks" ng-click="getFunctions({{task}})">
