Fix drop down list issues and some formatting

--- a/www/templates/popup.html
+++ b/www/templates/popup.html
@@ -19,6 +19,6 @@
 	</ion-list>
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Note</span>
-		<input type="text" placeholder='Enter a note for place' ng-model="data.notes">
+		<input type="text" placeholder='Enter a note for place' ng-model="data.notes" ng-click="closeList()">
 	</label>
 </div>
