Fix edit popup scroll

--- a/www/templates/editPopup.html
+++ b/www/templates/editPopup.html
@@ -1,4 +1,4 @@
-<div class="list">
+<div class="list" class="ng-cloak">
   <label class="item item-input item-stacked-label">
     <span class="input-label">Group</span>
     <input type="text" ng-model="data.group">
