--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,11 +1,12 @@
 <ion-view ng-show="map">
-  <ion-side-menus>
+  <ion-side-menus enable-menu-with-back-views="true">
     <!--Center content-->
     <ion-side-menu-content>
 
       <div id="map"></div>
       <div id="search-bar">
-        <button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>
+        <!--<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>-->
+        <button id="button" menu-toggle="left" class="button button-icon icon icon-left ion-navicon"></button>
         <input id="pac-input" class="controls" type="text" placeholder="Search map to add place">
         <button id="closeButton" class="button icon ion-close-round icon-right" ng-click="emptySearch()"></button>
       </div>
