--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9833,8 +9833,8 @@ a.button {
   text-overflow: ellipsis;
   margin-top: 20px;
   margin-left: -1px;
-  width: 60%;
-  height: 60px;
+  width: 65%;
+  height: 50px;
   border-radius: 0;
   position: -6px;
   padding-left: 0px; }
@@ -9842,25 +9842,26 @@ a.button {
 #button {
   background-color: #fff;
   margin-top: 20px;
-  margin-left: 10%;
-  height: 60px;
-  width: 60px;
+  margin-left: 15%;
+  margin-right: -1px;
+  height: 50px;
+  width: 40px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  padding-left: 20px; }
+  padding-left: 12px; }
 
 #closeButton {
   background-color: #fff;
   margin-top: 20px;
   margin-left: -2px;
-  margin-right: 10%;
-  height: 60px;
-  width: 60px;
+  margin-right: 15%;
+  height: 50px;
+  width: 40px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  padding-right: 20px; }
+  padding-right: 12px; }
 
 .infowindow .iw-title {
   color: #000;
