--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,23 +1,6 @@
 <ion-view ng-show="map">
   <ion-side-menus enable-menu-with-back-views="true">
-    <!--Center content-->
-    <ion-side-menu-content>
 
-      <div id="map"></div>
-      <div id="search-bar">
-        <!--<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>-->
-        <button id="button" menu-toggle="left" class="button button-icon icon icon-left ion-navicon"></button>
-        <input id="pac-input" class="controls" type="text" placeholder="Search map to add place">
-        <button id="closeButton" class="button icon ion-close-round icon-right" ng-click="emptySearch()"></button>
-      </div>
-      <ion-nav-view></ion-nav-view>
-     
-
-    </ion-side-menu-content>
-
-
-    <!-- Left Menu -->
-    <!--<div ng-controller="MenuCtrl">-->
       <ion-side-menu side="left">
         <ion-header-bar class="bar-stable">
           <h1 class="title ng-cloak">Tripommendation</h1>
@@ -31,6 +14,22 @@
           </ion-list>
         </ion-content>
       </ion-side-menu>
+
+    <!--Center content-->
+    <ion-side-menu-content>
+      <div id="map"></div>
+      <div id="search-bar">
+          <!--<button id="button" menu-toggle="left" class="button button-icon icon ion-navicon icon-left"></button>-->
+          <button id="button" menu-toggle="left" class="button icon ion-navicon-round"></button>
+          <input id="pac-input" class="controls" type="text" placeholder="Search map to add place">
+          <button id="closeButton" class="button icon ion-close-round" ng-click="emptySearch()"></button>
+      </div>
+      <!--<ion-nav-view></ion-nav-view>-->
+    </ion-side-menu-content>
+
+
+    <!-- Left Menu -->
+    <!--<div ng-controller="MenuCtrl">-->
     <!--</div>-->
   </ion-side-menus>
 </ion-view>
