--- a/www/templates/instructions.html
+++ b/www/templates/instructions.html
@@ -6,7 +6,20 @@
 </ion-header-bar>
 
 <ion-content class="has-header" overflow-scroll="true">
-  <p>This is some test contect</p>
+  <div id="instructions">
+    <h4>Using the Map</h4><br>
+    <p>Search for the place you wish to save in the search box.  Then click on the marker and save that place with a group, a type and a note.</p><br>
+    <p><b>Group -</b> this is the main category for all recommendations and can be anything you want, from a broad group such as ‘San Francisco’ to much more specific groups such as ‘San Francisco Morning Activities’.</p><br>
+    <p><b>Type -</b> this is what type it is and can be whatever you want.  Some examples are ‘Restaurant’, ‘Museum’ or ‘Fun Things’.</p><br>
+    <p><b>Note -</b> this is just a place for you to put whatever you want, such as a reminder why you have saved this place like, ‘This is the best taco place in San Francisco’.</p><br>
+    <p>Once recommendations have been saved they can be retrieved from the menu by clicking the burger button and will show on the map as stars.  When the stars are clicked you will see all the details about the recommendation as well as an option to navigate to that place.</p><br>
+    <h4>Menu Items</h4>
+    <p><b>Search by Current Location -</b> this will return all your saved places that are in your general vicinity.  These are not filtered by anything other then location.</p><br>
+    <p><b>Search by Categories -</b> this is a filtered search that returns recommendations based on their group and/or type.</p><br>
+    <p><b>Remove Current Places -</b> this simply removes the recommendations that are currently displayed on screen, it does not delete the recommendations from memory.</p><br>
+    <p><b>Edit Places -</b> this allows you to edit and delete your recommendations, simply left swipe to access the available options.  These changes are permanent and can not be undone.</p><br>
+    <p><b>Offline -</b> provides a list of all your recommendations so that you have access to these even when you are offline.</p>
+  </div>
 </ion-content>
 
 
