--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9972,5 +9972,9 @@ p {
   padding: 10px;
 }
 
+#plus_minus {
+  margin-right: 20px;
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important; }
