--- a/www/templates/popup.html
+++ b/www/templates/popup.html
@@ -1,7 +1,7 @@
 <div class="list" class="ng-cloak">
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Group</span>
-		<input type="text" placeholder='Enter a group e.g. "Oakland"' ng-model="data.group" ng-keyup="getGroups()">
+		<input type="text" placeholder='Enter a group e.g. "Oakland"' ng-model="data.group" ng-keyup="getGroups(data.group)">
 	</label>
 	<ion-list>
 		<ion-item ng-repeat="group in matchingGroups" ng-click="data.group=group; closeList()">
@@ -10,7 +10,7 @@
 	</ion-list>
 	<label class="item item-input item-floating-label">
 		<span class="input-label">Type</span>
-		<input type="text" placeholder='Enter a type e.g. "Restaurant"' ng-model="data.type" ng-keyup="getTypes()">
+		<input type="text" placeholder='Enter a type e.g. "Restaurant"' ng-model="data.type" ng-keyup="getTypes(data.type)">
 	</label>
 	<ion-list>
 		<ion-item ng-repeat="type in matchingTypes" ng-click="data.type=type; closeList()">
