--- a/www/templates/editPopup.html
+++ b/www/templates/editPopup.html
@@ -21,4 +21,5 @@
     <span class="input-label">Note</span>
     <input type="text" ng-model="data.note">
   </label>
+  <button class="button button-block button-assertive" ng-click="delete(item); closeSelf()">Delete</button>
 </div>
