Fix formatting on findPlaces popup

--- a/www/templates/findPlaces.html
+++ b/www/templates/findPlaces.html
@@ -17,7 +17,5 @@
       <option></option>
     </select>
   </label>
-
-  <ion-checkbox ng-model="data.showVisitedTrue">Show visited places?</ion-checkbox>
-
+  <ion-checkbox class="findPlaces" ng-model="data.showVisitedTrue">Show visited places?</ion-checkbox>
 </div>
