--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9985,5 +9985,12 @@ p {
   margin-left: -15px;
 }
 
+.item.item-checkbox.findPlaces {
+  margin-left: -1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ddd;
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important; }
